Fixed layout problems

--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,15 @@ body{
     background: green;
     display: flex;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
+    padding-bottom: 50px;
 }
 .playing-field{
     border: 5px solid white;
     background-color: green;
-    height: 100vh;
-    width: 70%;
+    min-height: 100vh;
+    width: 100%;
     position: relative;
-    margin: auto;
+    transform: translate(-50%, 5%);
 }
 .top-eighteen-area{
     padding: 50px 50px;
@@ -18,7 +19,7 @@ body{
     margin: auto;
     position: absolute;
     top: 0;
-    left: 30%;
+    left: 10%;
 }
 .top-sixteen-area{
     padding: 25px 25px;
@@ -36,7 +37,7 @@ body{
     margin: auto;
     position: absolute;
     bottom: 0;
-    left: 30%;
+    left: 10%;
 }
 .bottom-sixteen-area{
     padding: 25px 25px;
@@ -128,7 +129,7 @@ body{
     position: absolute;
     box-shadow: 2px 2px 2px 2px black;
     width: 300px;
-    z-index: 3;
+    z-index: 10;
 }
 .count-info img{
     width: 150px;
